<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_normal"
    android:paddingEnd="@dimen/spacing_normal"
    tools:context="com.grayzlp.ggithub.ui.activity.SignInActivity">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginTop="@dimen/spacing_large"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAppearance="@android:style/TextAppearance.Material.Title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_your_github_account"
        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_float_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_float_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.FloatLabelHint"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/asl_password_visibility">

        <com.grayzlp.ggithub.ui.widget.PasswordEntry
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal">

        <Button
            android:id="@+id/use_oauth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/use_oauth_to_sign_in"
            style="?android:borderlessButtonStyle"
            android:textColor="@android:color/holo_blue_light"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:enabled="false"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.DarkButton" />

    </FrameLayout>


</LinearLayout>
